...
                  _emailError = null;
                }
                _isFormFilled = _emailController.text.isNotEmpty && _passwordController.text.isNotEmpty;
                setState(() { });
              },
              decoration: _inputDecoration(
                hint: "Digite seu e-mail",
                theme: theme,
              ),
              validator: (value) {
                setState(() {
                  _isFormFilled = _emailController.text.isNotEmpty && _passwordController.text.isNotEmpty;
                });
...
