...
          options.add(DropdownMenuItem(value: 'Telefone',child: Text('Telefone')));
          options.add(DropdownMenuItem(value: 'Chave Aleatória',child: Text('Chave Aleatória')));

          if(isSmall) {
            return Column(
              children: [
                _CustomTextField(label: "Nome Completo", hint: "Digite seu nome",
                value: widget.user.name),
                SizedBox(height: 16),
                _CustomDropdownField(label: "Tipo de Chave Pix", hint: "Selecione o tipo", options: options),
                SizedBox(height: 16),
                _CustomTextField(label: "Chave Pix", hint: "Digite sua chave", value: '',),
              ],
...
